1898 Kernel assertion in zfs_putpage() raised by rfs_write() Reviewed by: Gordon Ross <gordon.w.ross@gmail.com> Reviewed by: Eric Schrock <eric.schrock@delphix.com> Approved by: Richard Lowe <richlowe@richlowe.net>